@@ -1,3 +1,10 @@
+2000-11-25  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
+
+	* sysdeps/mips/__longjmp.c (__longjmp): Restore SP and FP last and
+	in a single asm as they may be used to access other stored
+	registers.
+	* sysdeps/mips/mips64/__longjmp.c (__longjmp): Likewise.
+
 2000-11-27  Andreas Jaeger  <aj@suse.de>
 
 	* rt/tst-aio.c: Mark test functions as static to avoid warnings.
